--- a/index.html
+++ b/index.html
@@ -37,14 +37,7 @@
 
 
  document.querySelector('#request-aoa').addEventListener('click', function(event) {
-	 navigator.usb.requestDevice({filters: [
-		 	{vendorId: 0x18d1, productId: 0x2D00},
-		 	{vendorId: 0x18d1, productId: 0x2D01},
-		 	{vendorId: 0x18d1, productId: 0x2D02},
-		 	{vendorId: 0x18d1, productId: 0x2D03},
-		 	{vendorId: 0x18d1, productId: 0x2D04},
-		 	{vendorId: 0x18d1, productId: 0x2D05}
-	 	]})
+	 navigator.usb.requestDevice()
 	 .then(usbDevice => {
 		  console.log("Product name: " + usbDevice.productName);
 		  setupPipes(usbDevice);
