--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 		<button id="send" style="margin: 2px">Send</button>
 	</div>
 	<textarea readonly id="chat-area" rows="16" cols="28" style="resize: none;"></textarea><br> 
+	<textarea id="log" rows="4" cols="50">
 	<audio id="player" controls style="display: none;"></audio>
 </div>	
 
@@ -71,7 +72,7 @@
  		console.log("connected");
  		checkProtocol(usbDevice);
  	}).catch(e => {
-		console.log("Can't connect " + e);
+		addText("Error:" + e)
 	});
  }
 
@@ -107,6 +108,11 @@ function str2ab(str) {
   return buf;
 }
 
+	function addText(event) {
+    var targ = event.target || event.srcElement;
+    document.getElementById("log").value += targ.textContent || targ.innerText;
+}
+	
 async function setCredentials(usbDevice) {
   let credetials = ["once2go", "WebUsbChat", "desCripTion", "1.0", "uRi", "seRialNuMbeR"];
   for (var i = 0; i < credetials.length; i++) {
