--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
  document.querySelector('#request-aoa').addEventListener('click', function(event) {
 	 navigator.usb.requestDevice({filters: [
-   	      {vendorId: 0x1004, productId: 0x633E},
+   	      {vendorId: 0x1004, productId: 0x2D00},
    	      {vendorId: 0x1004, productId: 0x2D01},
    	      {vendorId: 0x1004, productId: 0x2D02},
    	      {vendorId: 0x1004, productId: 0x2D03},
