--- a/index.html
+++ b/index.html
@@ -38,14 +38,7 @@
 
 
  document.querySelector('#request-aoa').addEventListener('click', function(event) {
-	 navigator.usb.requestDevice({filters: [
-   	      {vendorId: 0x1004, productId: 0x2D00},
-   	      {vendorId: 0x1004, productId: 0x2D01},
-   	      {vendorId: 0x1004, productId: 0x2D02},
-   	      {vendorId: 0x1004, productId: 0x2D03},
-   	      {vendorId: 0x1004, productId: 0x2D04},
-   	      {vendorId: 0x1004, productId: 0x2D05}
-         ]})
+	 navigator.usb.requestDevice({filters: []})
 	 .then(usbDevice => {
 		  console.log("Product name: " + usbDevice.productName);
 		  setupPipes(usbDevice);
