--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
  document.querySelector('#request-aoa').addEventListener('click', function(event) {
 	 navigator.usb.requestDevice({filters: [
-		  
+		   {vendorId: 0x1004, productId: 0x61f9}
 	 	]})
 	 .then(usbDevice => {
 		  console.log("Product name: " + usbDevice.productName);
