--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
   });
 
  document.querySelector("#request-any").addEventListener('click', function(event) {
-   	 navigator.usb.requestDevice({filters: [{vendorId: 0x18d1, productId: 2d01}]})
+   	 navigator.usb.requestDevice({filters: [{vendorId: 0x18d1, productId: 0x2d01}]})
 	.then(usbDevice => {
 	      console.log("Product name: " + usbDevice.productName);
 		  connect(usbDevice);
